--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,16 @@
 html{
-  height: 100%;
+  height: 1000px;
 }
 
 body {
   background: #f8f5f4;
   /*backgraund: #f8f5f4;*/
-  height: 100%;
+  height: 1000px;
 }
 
 #wrapper{
   position: relative;
-  height:100%;
+  height:1000px;
   width:100%;
 }
 
@@ -31,15 +31,16 @@ body {
 }
 
 #loading{
-  display: none;
-  position: absolute;
-  width: 100px;
-  height: 100px;
+  /*display: none;*/
+  position: fixed;
   top: 0;
-	right: 0;
-	bottom: 0;
+	right: -50px;
+	bottom: -50px;
 	left: 0;
 	margin: auto;
+  width: 100px;
+  height: 100px;
+  z-index: 100;
 }
 
 #loadingCircle{
@@ -73,8 +74,9 @@ button img{
 
 #welcome_card{
   width: 95%;
+  min-width: 300px;
   background: #fff;
-  height: 100px;
+  height: 176px;
   margin: 3px auto;
   padding: 0px;
   border: 1px #000 solid;
@@ -88,11 +90,21 @@ button img{
 
 #tweets{
   width: 95%;
+  min-width: 300px;
   background: #fff;
   height: 176px;
   margin: 3px auto 0px;
   border: 1px #000 solid;
   padding: 0px;
+  word-break: break-all;
+}
+
+h2{
+  font-size: 2rem;
+}
+
+h6{
+  font-size: 1rem;
 }
 
 #icon{
@@ -106,21 +118,20 @@ button img{
     -webkit-transform: translateX(-370px);
     transform: translateX(-370px);
   }
-
-  /*.mdl-layout__header{
-    margin-left:360px;
-    width:calc(100% - 360px);
-  }*/
 }
 
 @media all and (min-width: 1025px){
   .page-content{
     -webkit-transform: translateX(360px);
     transform: translateX(360px);
-    width: calc(90*(100% - 360px))
+    width: calc(100% - 360px);
   }
-  /*.mdl-card{
-      width: calc(100% - 360px);
-      height: 176px;
-  }*/
+  h2{
+    font-size: 3rem;
+  }
+
+  h6{
+    font-size: 1.66667rem;
+  }
+
 }
