--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,6 @@ button img{
   height: 176px;
   margin: 3px auto;
   padding: 0px;
-  border: 1px #000 solid;
 }
 
 /*.page-content{
@@ -94,7 +93,6 @@ button img{
   background: #fff;
   height: 176px;
   margin: 3px auto 0px;
-  border: 1px #000 solid;
   padding: 0px;
   word-break: break-all;
 }
@@ -102,13 +100,25 @@ button img{
 h2{
   font-size: 2rem;
 }
-
-h6{
+h5{
   font-size: 1rem;
+}
+h6{
+  clear: left;
+  font-size: 0.5rem;
+  margin: 0;
+  padding: 0;
+  line-height: 1rem;
 }
 
 #icon{
+  float: left;
   height: 72px;
+  margin: 0px;
+}
+
+.username{
+  float: left;
 }
 
 /*for PC*/
@@ -129,9 +139,11 @@ h6{
   h2{
     font-size: 3rem;
   }
-
-  h6{
+  h5{
     font-size: 1.66667rem;
+  }
+  h6{
+    font-size: 1.0rem;
   }
 
 }
